fix z-index summernote on fullscreen, show tooltip and modifying dialogs

--- a/components/sass/_form.scss
+++ b/components/sass/_form.scss
@@ -1,8 +1,16 @@
-.form-control:focus {
+.form-control{
+  @include box-shadow(none);
+}
+
+.form-control:focus,
+.bootstrap-tagsinput:focus{
   border-color: $color-accent2;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(77, 196, 210, .6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(77, 196, 210, .6);
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(77, 196, 210, .6));
+}
+
+.bootstrap-tagsinput input {
+  width: 100%;
 }
 
 .form-control, .dropdown-menu {
