--- a/components/sass/_private.scss
+++ b/components/sass/_private.scss
@@ -113,7 +113,7 @@ ul, ol{
   height: 100%;
   width: 250px;
   overflow-y: auto;
-  z-index: 10;
+  z-index: 1;
   left: 0;
 
   &:before{
@@ -327,7 +327,7 @@ header{
     line-height: 70px;
     position: relative;
     float: left;
-    z-index: 5;
+    z-index: 1;
   }
 
   .title{
@@ -435,6 +435,8 @@ header{
 }
 
 .content{
+  background: url("../images/misc/strip-page-bottom.png") no-repeat center bottom;
+  background-size: 100%;
   @include box-shadow(rgba(0, 0, 0, .1) 0 1px 5px);
   margin: $space-medium;
   background-color: $color-light;
@@ -454,25 +456,13 @@ header{
     top: 0;
     z-index: 0;
   }
-
-  &:after{
-    content: "";
-    background: url("../images/misc/strip-page-bottom.png") no-repeat center bottom;
-    background-size: 100%;
-    width: 100%;
-    height: 300px;
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 0;
-  }
 }
 
 .title-section{
   @include clearfix();
   margin-bottom: $space-medium;
   display: block;
+  position: relative;
 
   > .title-wrapper{
     float: left;
@@ -504,12 +494,7 @@ header{
   }
 }
 
-.content-section, .title-section{
-  position: relative;
-}
-
 .content-section{
-  z-index: 1;
   margin-bottom: $space-medium;
 }
 
