--- a/components/sass/_responsive.scss
+++ b/components/sass/_responsive.scss
@@ -171,4 +171,8 @@
   .breadcrumb-wrapper .control .link{
     display: inline-block!important;
   }
+
+  .form-strip {
+    margin: 0 -20px;
+  }
 }
